--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,4 @@
+PORT=3000
 REACT_APP_SUPABASE_URL=your-supabase-url
 REACT_APP_SUPABASE_ANON_KEY=your-supabase-anon-key
-REACT_APP_API_BASE_URL=http://localhost:3000
+REACT_APP_API_BASE_URL=http://localhost:3001
